--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node server.js",
     "dev": "cross-env NODE_ENV=development nodemon server.js",
-    "test": "cross-env NODE_ENV=test jest --watchAll --runInBand"
+    "test": "cross-env NODE_ENV=test jest --watchAll"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "jest": "^27.3.1",
+    "jest-watch-typeahead": "^1.0.0",
     "nodemon": "^2.0.15",
     "smtp-server": "^3.9.0",
     "supertest": "^6.1.6"
@@ -39,6 +40,10 @@
     "xss-clean": "^0.1.1"
   },
   "jest": {
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
+    ],
     "testPathIgnorePatterns": [
       "<rootDir>/node_modules/"
     ]
